css/pretty.css
* {
    padding: 0px;
    margin: 0px;
}

html, body {
    width: 100%;
    height: 100%;
}

body {
    height: 100%;
    width: 100%;
    background-color: #111;
    background-image: url('https://source.unsplash.com/user/mrdnomaid/likes/1280x720');
    background-size: cover;
    background-position: bottom;
    background-repeat: no-repeat;
    font-family: 'Rubik', sans-serif;
}

#links {
    position: fixed;
    top: 0;
    left: 0;
    padding-top: 2.5%;
    padding-left: 2.5%;
    padding-right: 2.5%;
    border-right: 15px solid #222;
    font-size: 2em;
    height: 100%;
    background-color: #111;
}

h1#title {
    color: #fafafa;
    font-family: 'Ubuntu Mono', monospace;
    font-size: 1.9em;
    cursor: default;
    width: 100%;
}

h3 {
    margin-top: 20px;
    color: #444;
    font-size: 0.95em;
}

a {
    cursor: pointer;
    text-decoration: none;
    color: #dedede;
}

a:hover {
    color: #82c4ff;
}

#yt:hover {
    color: #cd201f;
}

#tw:hover {
    color: #1da1f2;
}

#gh:hover {
    color: #999;
}

#bl:hover {
    color: #09a51e;
}

#re:hover {
  color: #ff4500;
}

@media screen and (max-width: 400px) {
    #links {
        width: 100%;
        border: none;
        background-color: rgba(17, 17, 17, 0.85);
        font-size: 9vw;
    }
}

@media screen and (min-width: 1950px) {
    #links {
        font-size: 1.5em;
    }
}

@media screen and (min-width: 1920px) {
    body {
        background-image: url('https://source.unsplash.com/user/mrdnomaid/likes/3840x2160');
    }
}

